# open-fullRStack

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflows/: rust.yml
.sqlx/: query-009d07f4603eba46dc4e1f9ecd92c76391ee828428a82f6f772d7cdf431de31b.json  query-59e3b26f2781c0b7d83486cbe039af1bf1eed89300f3ac62331b75d6b0a601c2.json  query-898509a54d2ae76b67e3b341763ce9f9d2e849b24f2a050f2c24977420eda475.json  query-90afd62f33f8a49b242630d51c410233708e8f7a46b4e7fd3bcad325d6c6f4d3.json  query-a379038a0389a569001c8e6e355d76328ad0b337a0b9b8ba5105c72dc5fafaa3.json  query-ae30c7d43c6ebfb542ac388fab922f63cfd4a0cbb54340916f346baa6a9e6fcc.json  query-c48fbeaff1209a148304b10449cebdba074b68d59f7153e057c2d0fc124dff65.json
migrations/: 20250318213837_reset_blogs.sql  20250320171956_create-blogs.up.sql  20250320171959_create-blogs-test.down.sql  20250320171959_create-blogs-test.up.sql  20250328183115_create-blogs.down.sql  20250328183115_create-blogs.up.sql
scripts/: init_db.sh
src/: blogs_api.rs  config.rs  configuration.rs  error_handling.rs  errors.rs  lib.rs  main.rs  main_test.rs  models.rs  test_helper.rs
src/blog/: create.rs  delete.rs  mod.rs  read.rs  test_helper.rs  update.rs
src/migrations/: 20250314162200_create_blogs_table.sql
tests/: quick_dev.rs
