[package]
name = "part4-bloglist"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Bragante <andrea.bragante00@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fullrstack"

[dependencies]
tokio = { version = "1.44.1", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "test-util",
] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "tls-native-tls",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
serde_json = "1.0.140"
axum-test = "17.2.0"
testcontainers = { version = "0.23.3", features = ["blocking"] }
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
color-eyre = "0.6.3"

[dev-dependencies]
watch = "0.2.3"
tower = "0.5.2"
hyper = "1.6.0"
axum-test = "17.2.0"
anyhow = "1"
httpc-test = "0.1.10"
rstest = "0.25.0"
